fixed files not being loaded in production and changed Easter egg bee config